@@ -19,8 +19,8 @@
 package org.apache.maven.it;
 
 import java.io.File;
+import java.nio.file.Files;
 
-import org.apache.commons.io.FileUtils;
 import org.apache.maven.artifact.versioning.DefaultArtifactVersion;
 import org.junit.jupiter.api.Test;
 
@@ -57,8 +57,9 @@ class MavenITmng7228LeakyModelTest extends AbstractMavenIntegrationTestCase {
         if (getMavenVersion().compareTo(new DefaultArtifactVersion("4.0.0-alpha-7")) > 0) {
             classifier = "build";
         }
-        String pom = FileUtils.readFileToString(new File(
-                verifier.getArtifactPath("org.apache.maven.its.mng7228", "test", "1.0.0-SNAPSHOT", "pom", classifier)));
+        String pom = Files.readString(new File(verifier.getArtifactPath(
+                        "org.apache.maven.its.mng7228", "test", "1.0.0-SNAPSHOT", "pom", classifier, null))
+                .toPath());
 
         assertThat(pom, containsString("projectProperty"));
         assertThat(pom, not(containsString("activeProperty")));
